--- a/Box Model/style.css
+++ b/Box Model/style.css
@@ -6,9 +6,19 @@
 
 #box-one {
   background-color: lightcoral;
-  border: 0 solid purple;
+  height: 100px;
+  width: 200px;
+  padding: 20px;
+  border: 10px solid purple;
+  margin: 20px;
+  /* in a box-model margin  collapses between tow elements that are next to each other 
+   element will larger margin will be shown in between them */
 }
 #box-two {
   background-color: lightblue;
-  border: 0 solid green;
+  height: 100px;
+  width: 200px;
+  padding: 20px;
+  border: 10px solid purple;
+  margin: 30px;
 }
